Fixed compilation  issue